stderr.txt
undefined:1
Forbidden
^

SyntaxError: Unexpected token F in JSON at position 0
    at JSON.parse (<anonymous>)
    at Request.weather.getWeatherDarkSky [as _callback] (/root/Homefit/HomeFit/back-end/server/index.js:144:31)
    at Request.self.callback (/root/Homefit/HomeFit/node_modules/request/request.js:185:22)
    at emitTwo (events.js:126:13)
    at Request.emit (events.js:214:7)
    at Request.<anonymous> (/root/Homefit/HomeFit/node_modules/request/request.js:1161:10)
    at emitOne (events.js:116:13)
    at Request.emit (events.js:211:7)
    at IncomingMessage.<anonymous> (/root/Homefit/HomeFit/node_modules/request/request.js:1083:12)
    at Object.onceWrapper (events.js:313:30)

npm ERR! Linux 4.15.0-36-generic
npm ERR! argv "/usr/bin/node" "/usr/bin/npm" "run" "start" "stdout.txt"
npm ERR! node v8.10.0
npm ERR! npm  v3.5.2
npm ERR! code ELIFECYCLE
npm ERR! home-fit@0.0.0 start: `node back-end/server/index.js "stdout.txt"`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the home-fit@0.0.0 start script 'node back-end/server/index.js "stdout.txt"'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the home-fit package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node back-end/server/index.js "stdout.txt"
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs home-fit
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls home-fit
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /root/Homefit/HomeFit/npm-debug.log
